--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -30,7 +30,7 @@
         <li>Lightly oil the grill grate. Grill patties until browned and no longer pink, about 5 minutes per side.</li>
         <li>Serve hot and enjoy!</li>
     </ol>
-
+    <a href="../index.html">Return to main page</a>
 </body>
 
 </html>
