--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1 id= 'header'> Odin Recipes</h1>
+        <img src="./chef.jpg" alt="lasagna" width="300">
+        <div>
+            <ul>
+                <a href='./recipes/lasagna.html'>Lasagna</a></li>
+                <a href='./recipes/hamburger.html'>Hamburger</a></li>
+                <a href='./recipes/scrambledeggs.html'>Scrambled Eggs</a></li>
+            </ul>
+        </div>
+    
+    </body>
 </html>
